@@ -81,3 +81,4 @@
 - Added "OO/MM" mute labels like alsamixer does.
 - Collapse "default" notification to a single line, below the channel
   name, and leave room for it whether the channel supports it or not.
+- Added `o` keybinding to toggle display of port options
